Improve schematic handling